# edgar-sec-mcp

./: pyproject.toml
src/edgar_sec_mcp/: __init__.py  server.py
src/edgar_sec_mcp/edgar/: filings.py  models.py  sec_forms.py  util.py
