[project]
name = "edgar-sec-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Floth", email = "flothjldev@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
]

[project.scripts]
edgar-sec-mcp = "edgar_sec_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
